# tell-me

./: .gitignore  Cargo.toml  LICENSE  README.md  test_rtf.rs
.ai/: history.json
.github/workflows/: release.yml
.kiro/specs/coi-local-qa/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: chinses-language.md
scripts/: build_all.sh  package.sh
skill/coi-qa/: SKILL.md
skill/coi-qa-rust/: SKILL.md
skill/tell-me/: SKILL.md
src/: cli.rs  config.rs  embedding.rs  error.rs  fqa_store.rs  main.rs  parser.rs  scanner.rs  splitter.rs  vector_store.rs
src/handlers/: add_fqa.rs  ask.rs  clear.rs  init.rs  mod.rs
